[package]
name = "rabdog"
description = "A Scratch communities' project downloader"
version = "0.2.7"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4"
indicatif = "0.17"

# Utils
async-trait = "0.1"
once_cell = "1"
anyhow = "1"

# Processing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
bytes = "1"
scraper = "0.19"

# Decoding
base64 = "0.22"
md-5 = "0.11.0-pre.3"
rsa = "0.10.0-pre.1"
rand = "0.8"
chrono = "0.4"
base16ct = { version = "0.2", features = ["alloc"] }
aes = "0.8"
zip = { version = "2.1", features = ["deflate"]}
cbc = { version = "0.1", features = ["std"] }
percent-encoding = "2.3"

tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal"] }
futures = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.dependencies]
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }

[target.'cfg(not(unix))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }

[package.metadata.winres]
LegalCopyright = "LycasLdt"

[profile.release]
opt-level = 2 